// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentityOverview should render a normal identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1
        <span
          class="fractional"
        >
          .2340
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <a
        class="button"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/send"
      >
        Send
      </a>
      <a
        class="button"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/receive"
      >
        Receive
      </a>
    </p>
    <a
      class="credentials"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/credentials"
    >
      Show Credentials
    </a>
    <a
      class="upgrade"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/upgrade"
    >
      Get your DID
    </a>
    <a
      class="web3Name"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/web3name/create/info"
    >
      Create web3name
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityOverview should render full DID identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            Identity with on-chain DID and lots of coins
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Light DID Identity"
        class="left"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
        title="Light DID Identity"
      />
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="right"
        href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-label="Light DID Identity"
            class="bubble"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1
        <span
          class="fractional"
        >
          .2340
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <a
        class="button"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/send"
      >
        Send
      </a>
      <a
        class="button"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/receive"
      >
        Receive
      </a>
    </p>
    <a
      class="subscan"
      href="https://kilt-testnet.subscan.io/account/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo?tab=transfer"
      rel="noreferrer"
      target="_blank"
    >
      View Transactions
    </a>
    <a
      class="credentials"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/credentials"
    >
      Show Credentials
    </a>
    <a
      class="manage"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/did"
    >
      Manage DID
    </a>
    <a
      class="web3Name"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/web3name/create/info"
    >
      Create web3name
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityOverview should render the new identity 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section>
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/add"
          title="Add Identity"
        />
      </section>
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="left"
        href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
      <a
        aria-label="Light DID Identity"
        class="right"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
        title="Light DID Identity"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-label="Light DID Identity"
            class="bubble"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Add Identity"
            class="add addActive"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <a
      class="add"
      href="/identity/add"
    >
      Add Identity
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityOverview should render with link to send screen 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1
        <span
          class="fractional"
        >
          .2340
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <a
        class="button"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/send"
      >
        Send
      </a>
      <a
        class="button"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/receive"
      >
        Receive
      </a>
    </p>
    <a
      class="subscan"
      href="https://kilt-testnet.subscan.io/account/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1?tab=transfer"
      rel="noreferrer"
      target="_blank"
    >
      View Transactions
    </a>
    <a
      class="credentials"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/credentials"
    >
      Show Credentials
    </a>
    <a
      class="upgrade"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/upgrade"
    >
      Get your DID
    </a>
    <a
      class="web3Name"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/web3name/create/info"
    >
      Create web3name
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityOverview should show notification for not backed up credentials 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Light DID Identity"
            class="bubble bubbleActive"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1
        <span
          class="fractional"
        >
          .2340
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <a
        class="button"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/send"
      >
        Send
      </a>
      <a
        class="button"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/receive"
      >
        Receive
      </a>
    </p>
    <a
      class="subscan"
      href="https://kilt-testnet.subscan.io/account/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1?tab=transfer"
      rel="noreferrer"
      target="_blank"
    >
      View Transactions
    </a>
    <a
      aria-label="Show Credentials. Some credentials have not been backed up"
      class="downloadPrompt"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/credentials"
    >
      Show Credentials
    </a>
    <a
      class="manage"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did"
    >
      Manage DID
    </a>
    <a
      class="web3Name"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/web3name/create/info"
    >
      Create web3name
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityOverview should show on-chain DID removed 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            Identity with deleted on-chain DID
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="Light DID Identity"
        class="right"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
        title="Light DID Identity"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-label="Light DID Identity"
            class="bubble"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1
        <span
          class="fractional"
        >
          .2340
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <a
        class="button"
        href="/identity/4rZ7pGtvmLhAYesf7DAzLQixdTEwWPN3emKb44bKVXqSoTZB/send"
      >
        Send
      </a>
      <a
        class="button"
        href="/identity/4rZ7pGtvmLhAYesf7DAzLQixdTEwWPN3emKb44bKVXqSoTZB/receive"
      >
        Receive
      </a>
    </p>
    <a
      class="subscan"
      href="https://kilt-testnet.subscan.io/account/4rZ7pGtvmLhAYesf7DAzLQixdTEwWPN3emKb44bKVXqSoTZB?tab=transfer"
      rel="noreferrer"
      target="_blank"
    >
      View Transactions
    </a>
    <a
      aria-label="Show Credentials. Some credentials have not been backed up"
      class="downloadPrompt"
      href="/identity/4rZ7pGtvmLhAYesf7DAzLQixdTEwWPN3emKb44bKVXqSoTZB/credentials"
    >
      Show Credentials
    </a>
    <a
      class="upgrade"
      href="/identity/4rZ7pGtvmLhAYesf7DAzLQixdTEwWPN3emKb44bKVXqSoTZB/did/upgrade"
    >
      DID removed
    </a>
    <a
      class="web3Name"
      href="/identity/4rZ7pGtvmLhAYesf7DAzLQixdTEwWPN3emKb44bKVXqSoTZB/web3name"
    >
      <span
        class="web3NameManage"
      >
        Manage web3name: fancy-name
      </span>
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;

exports[`IdentityOverview should show web3name 1`] = `
<div>
  <main
    class="container"
  >
    <header>
      <h1
        class="heading"
      >
        Your Identities
      </h1>
      <p
        class="info"
      >
        You have 3 Identities
      </p>
    </header>
    <div
      class="container"
    >
      <section
        class="container"
      >
        <div
          class="avatar fullDid"
        >
          Identicon
        </div>
        <div
          class="nameLine"
        >
          <span
            class="name"
          >
            Light DID Identity
          </span>
          <div
            class="wrapper"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Identity options"
              class="toggle"
              role="button"
              tabindex="0"
              title="Identity options"
              type="button"
            />
          </div>
        </div>
      </section>
      <a
        aria-label="Add Identity"
        class="left"
        href="/identity/NEW"
        title="Add Identity"
      />
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="right"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
        title="Identity with on-chain DID and lots of coins"
      />
      <ul
        class="bubbles"
      >
        <li
          class="item"
        >
          <a
            aria-label="Light DID Identity"
            class="bubble"
            href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
            title="Light DID Identity"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-current="page"
            aria-label="Identity with on-chain DID and lots of coins"
            class="bubble bubbleActive"
            href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
            title="Identity with on-chain DID and lots of coins"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Identity which has a very very very very long name and might not even fit on the screen"
            class="bubble"
            href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
            title="Identity which has a very very very very long name and might not even fit on the screen"
          />
        </li>
        <li
          class="item"
        >
          <a
            aria-label="Add Identity"
            class="add"
            href="/identity/NEW"
            title="Add Identity"
          />
        </li>
      </ul>
    </div>
    <p
      class="balanceLine"
    >
      Total Balance: 
      <span
        class="amount"
      >
        1
        <span
          class="fractional"
        >
          .2340
        </span>
         
        <span
          aria-label="KILT Coin"
          class="coin"
        />
      </span>
      <button
        aria-label="Show balance breakdown"
        class="showBreakdown"
        title="Show balance breakdown"
        type="button"
      />
    </p>
    <p>
      <a
        class="button"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/send"
      >
        Send
      </a>
      <a
        class="button"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/receive"
      >
        Receive
      </a>
    </p>
    <a
      class="subscan"
      href="https://kilt-testnet.subscan.io/account/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1?tab=transfer"
      rel="noreferrer"
      target="_blank"
    >
      View Transactions
    </a>
    <a
      aria-label="Show Credentials. Some credentials have not been backed up"
      class="downloadPrompt"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/credentials"
    >
      Show Credentials
    </a>
    <a
      class="manage"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did"
    >
      Manage DID
    </a>
    <a
      class="web3Name"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/web3name"
    >
      <span
        class="web3NameManage"
      >
        Manage web3name: fancy-name
      </span>
    </a>
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </main>
</div>
`;
